tests/ui/rfcs/rfc-2126-extern-absolute-paths/non-existent-3.stderr
error[E0432]: unresolved import `ycrate`
  --> $DIR/non-existent-3.rs:3:5
   |
LL | use ycrate;
   |     ^^^^^^ no external crate `ycrate`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
