tests/ui/rfcs/rfc-2126-extern-absolute-paths/non-existent-3.rs
//@ edition:2018

use ycrate; //~ ERROR unresolved import `ycrate`

fn main() {}
